[gd_scene load_steps=10 format=3 uid="uid://jlbt7nbl8k2q"]

[ext_resource type="Script" uid="uid://benppn4px846e" path="res://World/scenes/bush.gd" id="1_rl3mu"]
[ext_resource type="Texture2D" uid="uid://bxfm7lsj2su8u" path="res://Shadows/LargeShadow.png" id="1_vdt5u"]
[ext_resource type="Texture2D" uid="uid://b0i3abk5ub46h" path="res://Effects/BushHide.png" id="3_rl3mu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q8dhi"]
radius = 8.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v0nad"]
radius = 47.0106

[sub_resource type="Animation" id="Animation_v2owv"]
resource_name = "Hide"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v0nad"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_rl3mu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pa1ia"]
_data = {
&"Hide": SubResource("Animation_v2owv"),
&"Idle": SubResource("Animation_v0nad"),
&"RESET": SubResource("Animation_rl3mu")
}

[node name="Bush" type="StaticBody2D"]
script = ExtResource("1_rl3mu")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(1, 6)
texture = ExtResource("1_vdt5u")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_rl3mu")
hframes = 2
vframes = 3
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_q8dhi")

[node name="BushCamera" type="Camera2D" parent="."]

[node name="HideableArea" type="Area2D" parent="."]
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="HideableArea"]
shape = SubResource("CircleShape2D_v0nad")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pa1ia")
}

[connection signal="body_entered" from="HideableArea" to="." method="_on_hideable_area_body_entered"]
[connection signal="body_exited" from="HideableArea" to="." method="_on_hideable_area_body_exited"]
